# carnet-tbi

./: .gitignore  README.md  app.py  prompt_builder.py  pyproject.toml  survey_ui.py  utils.py  xlsx_to_json.py
anketa/: uprava.xlsx
averages/: it_strucnjaci_data.json  nastavnici_data.json  studenti_data.json  uprava_data.json
json_data/: it_strucnjaci.json  nastavnici.json  studenti.json  uprava.json
odgovori_anketa/: it_strucnjaci.xlsx  nastavnici.xlsx  studenti.xlsx
